src/qasm/parser.output
Grammar

    0 $accept: mainprogram $end

    1 mainprogram: VERSION REAL SEMI program

    2 program: statement
    3        | program statement

    4 statement: decl
    5          | gatedecl goplist RBRACE
    6          | gatedecl RBRACE
    7          | OPAQUE IDENTIFIER idlist SEMI
    8          | OPAQUE IDENTIFIER LPAREN RPAREN idlist SEMI
    9          | OPAQUE IDENTIFIER LPAREN idlist RPAREN idlist SEMI
   10          | qop
   11          | IF LPAREN IDENTIFIER MATCHES NNINTEGER RPAREN qop
   12          | BARRIER mixedlist SEMI

   13 decl: QREG IDENTIFIER LSQUARE NNINTEGER RSQUARE SEMI
   14     | CREG IDENTIFIER LSQUARE NNINTEGER RSQUARE SEMI

   15 gatedecl: GATE IDENTIFIER idlist LBRACE
   16         | GATE IDENTIFIER LPAREN RPAREN idlist LBRACE
   17         | GATE IDENTIFIER LPAREN idlist RPAREN idlist LBRACE

   18 goplist: uop
   19        | BARRIER idlist SEMI
   20        | goplist uop
   21        | goplist BARRIER idlist SEMI

   22 qop: uop
   23    | MEASURE argument ASSIGN argument SEMI
   24    | RESET argument SEMI

   25 uop: U LPAREN explist RPAREN argument SEMI
   26    | CX argument COMMA argument SEMI
   27    | IDENTIFIER mixedlist SEMI
   28    | IDENTIFIER LPAREN RPAREN mixedlist SEMI
   29    | IDENTIFIER LPAREN explist RPAREN mixedlist SEMI

   30 idlist: IDENTIFIER
   31       | idlist COMMA IDENTIFIER

   32 mixedlist: idlist
   33          | idlist LSQUARE NNINTEGER RSQUARE

   34 argument: IDENTIFIER
   35         | IDENTIFIER LSQUARE NNINTEGER RSQUARE

   36 explist: exp
   37        | explist COMMA exp

   38 exp: REAL
   39    | NNINTEGER
   40    | PI
   41    | IDENTIFIER
   42    | exp PLUS exp
   43    | exp MINUS exp
   44    | exp MUL exp
   45    | exp DIV exp
   46    | MINUS exp
   47    | exp POWER exp
   48    | LPAREN exp RPAREN
   49    | unaryop LPAREN exp RPAREN

   50 unaryop: SIN
   51        | COS
   52        | TAN
   53        | EXP
   54        | LN
   55        | SQRT


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER <string> (258) 7 8 9 11 13 14 15 16 17 27 28 29 30 31 34
    35 41
REAL <string> (259) 1 38
NNINTEGER <string> (260) 11 13 14 33 35 39
SIN <token> (261) 50
COS <token> (262) 51
TAN <token> (263) 52
EXP <token> (264) 53
LN <token> (265) 54
SQRT <token> (266) 55
PI <token> (267) 40
PLUS <token> (268) 42
MINUS <token> (269) 43 46
MUL <token> (270) 44
DIV <token> (271) 45
POWER <token> (272) 47
ASSIGN <token> (273) 23
MATCHES <token> (274) 11
LPAREN <token> (275) 8 9 11 16 17 25 28 29 48 49
RPAREN <token> (276) 8 9 11 16 17 25 28 29 48 49
LBRACE <token> (277) 15 16 17
RBRACE <token> (278) 5 6
LSQUARE <token> (279) 13 14 33 35
RSQUARE <token> (280) 13 14 33 35
SEMI <token> (281) 1 7 8 9 12 13 14 19 21 23 24 25 26 27 28 29
COMMA <token> (282) 26 31 37
BARRIER <token> (283) 12 19 21
CREG <token> (284) 14
QREG <token> (285) 13
IF <token> (286) 11
MEASURE <token> (287) 23
OPAQUE <token> (288) 7 8 9
RESET <token> (289) 24
GATE <token> (290) 15 16 17
CX <token> (291) 26
U <token> (292) 25
VERSION <token> (293) 1


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
mainprogram <root> (40)
    on left: 1, on right: 0
program <root> (41)
    on left: 2 3, on right: 1 3
statement <stmt> (42)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 3
decl (43)
    on left: 13 14, on right: 4
gatedecl (44)
    on left: 15 16 17, on right: 5 6
goplist (45)
    on left: 18 19 20 21, on right: 5 20 21
qop (46)
    on left: 22 23 24, on right: 10 11
uop (47)
    on left: 25 26 27 28 29, on right: 18 20 22
idlist (48)
    on left: 30 31, on right: 7 8 9 15 16 17 19 21 31 32 33
mixedlist (49)
    on left: 32 33, on right: 12 27 28 29
argument (50)
    on left: 34 35, on right: 23 24 25 26
explist (51)
    on left: 36 37, on right: 25 29 37
exp (52)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49, on right: 36 37 42
    43 44 45 46 47 48 49
unaryop (53)
    on left: 50 51 52 53 54 55, on right: 49


State 0

    0 $accept: . mainprogram $end

    VERSION  shift, and go to state 1

    mainprogram  go to state 2


State 1

    1 mainprogram: VERSION . REAL SEMI program

    REAL  shift, and go to state 3


State 2

    0 $accept: mainprogram . $end

    $end  shift, and go to state 4


State 3

    1 mainprogram: VERSION REAL . SEMI program

    SEMI  shift, and go to state 5


State 4

    0 $accept: mainprogram $end .

    $default  accept


State 5

    1 mainprogram: VERSION REAL SEMI . program

    IDENTIFIER  shift, and go to state 6
    BARRIER     shift, and go to state 7
    CREG        shift, and go to state 8
    QREG        shift, and go to state 9
    IF          shift, and go to state 10
    MEASURE     shift, and go to state 11
    OPAQUE      shift, and go to state 12
    RESET       shift, and go to state 13
    GATE        shift, and go to state 14
    CX          shift, and go to state 15
    U           shift, and go to state 16

    program    go to state 17
    statement  go to state 18
    decl       go to state 19
    gatedecl   go to state 20
    qop        go to state 21
    uop        go to state 22


State 6

   27 uop: IDENTIFIER . mixedlist SEMI
   28    | IDENTIFIER . LPAREN RPAREN mixedlist SEMI
   29    | IDENTIFIER . LPAREN explist RPAREN mixedlist SEMI

    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 24

    idlist     go to state 25
    mixedlist  go to state 26


State 7

   12 statement: BARRIER . mixedlist SEMI

    IDENTIFIER  shift, and go to state 23

    idlist     go to state 25
    mixedlist  go to state 27


State 8

   14 decl: CREG . IDENTIFIER LSQUARE NNINTEGER RSQUARE SEMI

    IDENTIFIER  shift, and go to state 28


State 9

   13 decl: QREG . IDENTIFIER LSQUARE NNINTEGER RSQUARE SEMI

    IDENTIFIER  shift, and go to state 29


State 10

   11 statement: IF . LPAREN IDENTIFIER MATCHES NNINTEGER RPAREN qop

    LPAREN  shift, and go to state 30


State 11

   23 qop: MEASURE . argument ASSIGN argument SEMI

    IDENTIFIER  shift, and go to state 31

    argument  go to state 32


State 12

    7 statement: OPAQUE . IDENTIFIER idlist SEMI
    8          | OPAQUE . IDENTIFIER LPAREN RPAREN idlist SEMI
    9          | OPAQUE . IDENTIFIER LPAREN idlist RPAREN idlist SEMI

    IDENTIFIER  shift, and go to state 33


State 13

   24 qop: RESET . argument SEMI

    IDENTIFIER  shift, and go to state 31

    argument  go to state 34


State 14

   15 gatedecl: GATE . IDENTIFIER idlist LBRACE
   16         | GATE . IDENTIFIER LPAREN RPAREN idlist LBRACE
   17         | GATE . IDENTIFIER LPAREN idlist RPAREN idlist LBRACE

    IDENTIFIER  shift, and go to state 35


State 15

   26 uop: CX . argument COMMA argument SEMI

    IDENTIFIER  shift, and go to state 31

    argument  go to state 36


State 16

   25 uop: U . LPAREN explist RPAREN argument SEMI

    LPAREN  shift, and go to state 37


State 17

    1 mainprogram: VERSION REAL SEMI program .
    3 program: program . statement

    IDENTIFIER  shift, and go to state 6
    BARRIER     shift, and go to state 7
    CREG        shift, and go to state 8
    QREG        shift, and go to state 9
    IF          shift, and go to state 10
    MEASURE     shift, and go to state 11
    OPAQUE      shift, and go to state 12
    RESET       shift, and go to state 13
    GATE        shift, and go to state 14
    CX          shift, and go to state 15
    U           shift, and go to state 16

    $default  reduce using rule 1 (mainprogram)

    statement  go to state 38
    decl       go to state 19
    gatedecl   go to state 20
    qop        go to state 21
    uop        go to state 22


State 18

    2 program: statement .

    $default  reduce using rule 2 (program)


State 19

    4 statement: decl .

    $default  reduce using rule 4 (statement)


State 20

    5 statement: gatedecl . goplist RBRACE
    6          | gatedecl . RBRACE

    IDENTIFIER  shift, and go to state 6
    RBRACE      shift, and go to state 39
    BARRIER     shift, and go to state 40
    CX          shift, and go to state 15
    U           shift, and go to state 16

    goplist  go to state 41
    uop      go to state 42


State 21

   10 statement: qop .

    $default  reduce using rule 10 (statement)


State 22

   22 qop: uop .

    $default  reduce using rule 22 (qop)


State 23

   30 idlist: IDENTIFIER .

    $default  reduce using rule 30 (idlist)


State 24

   28 uop: IDENTIFIER LPAREN . RPAREN mixedlist SEMI
   29    | IDENTIFIER LPAREN . explist RPAREN mixedlist SEMI

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54
    RPAREN      shift, and go to state 55

    explist  go to state 56
    exp      go to state 57
    unaryop  go to state 58


State 25

   31 idlist: idlist . COMMA IDENTIFIER
   32 mixedlist: idlist .
   33          | idlist . LSQUARE NNINTEGER RSQUARE

    LSQUARE  shift, and go to state 59
    COMMA    shift, and go to state 60

    $default  reduce using rule 32 (mixedlist)


State 26

   27 uop: IDENTIFIER mixedlist . SEMI

    SEMI  shift, and go to state 61


State 27

   12 statement: BARRIER mixedlist . SEMI

    SEMI  shift, and go to state 62


State 28

   14 decl: CREG IDENTIFIER . LSQUARE NNINTEGER RSQUARE SEMI

    LSQUARE  shift, and go to state 63


State 29

   13 decl: QREG IDENTIFIER . LSQUARE NNINTEGER RSQUARE SEMI

    LSQUARE  shift, and go to state 64


State 30

   11 statement: IF LPAREN . IDENTIFIER MATCHES NNINTEGER RPAREN qop

    IDENTIFIER  shift, and go to state 65


State 31

   34 argument: IDENTIFIER .
   35         | IDENTIFIER . LSQUARE NNINTEGER RSQUARE

    LSQUARE  shift, and go to state 66

    $default  reduce using rule 34 (argument)


State 32

   23 qop: MEASURE argument . ASSIGN argument SEMI

    ASSIGN  shift, and go to state 67


State 33

    7 statement: OPAQUE IDENTIFIER . idlist SEMI
    8          | OPAQUE IDENTIFIER . LPAREN RPAREN idlist SEMI
    9          | OPAQUE IDENTIFIER . LPAREN idlist RPAREN idlist SEMI

    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 68

    idlist  go to state 69


State 34

   24 qop: RESET argument . SEMI

    SEMI  shift, and go to state 70


State 35

   15 gatedecl: GATE IDENTIFIER . idlist LBRACE
   16         | GATE IDENTIFIER . LPAREN RPAREN idlist LBRACE
   17         | GATE IDENTIFIER . LPAREN idlist RPAREN idlist LBRACE

    IDENTIFIER  shift, and go to state 23
    LPAREN      shift, and go to state 71

    idlist  go to state 72


State 36

   26 uop: CX argument . COMMA argument SEMI

    COMMA  shift, and go to state 73


State 37

   25 uop: U LPAREN . explist RPAREN argument SEMI

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    explist  go to state 74
    exp      go to state 57
    unaryop  go to state 58


State 38

    3 program: program statement .

    $default  reduce using rule 3 (program)


State 39

    6 statement: gatedecl RBRACE .

    $default  reduce using rule 6 (statement)


State 40

   19 goplist: BARRIER . idlist SEMI

    IDENTIFIER  shift, and go to state 23

    idlist  go to state 75


State 41

    5 statement: gatedecl goplist . RBRACE
   20 goplist: goplist . uop
   21        | goplist . BARRIER idlist SEMI

    IDENTIFIER  shift, and go to state 6
    RBRACE      shift, and go to state 76
    BARRIER     shift, and go to state 77
    CX          shift, and go to state 15
    U           shift, and go to state 16

    uop  go to state 78


State 42

   18 goplist: uop .

    $default  reduce using rule 18 (goplist)


State 43

   41 exp: IDENTIFIER .

    $default  reduce using rule 41 (exp)


State 44

   38 exp: REAL .

    $default  reduce using rule 38 (exp)


State 45

   39 exp: NNINTEGER .

    $default  reduce using rule 39 (exp)


State 46

   50 unaryop: SIN .

    $default  reduce using rule 50 (unaryop)


State 47

   51 unaryop: COS .

    $default  reduce using rule 51 (unaryop)


State 48

   52 unaryop: TAN .

    $default  reduce using rule 52 (unaryop)


State 49

   53 unaryop: EXP .

    $default  reduce using rule 53 (unaryop)


State 50

   54 unaryop: LN .

    $default  reduce using rule 54 (unaryop)


State 51

   55 unaryop: SQRT .

    $default  reduce using rule 55 (unaryop)


State 52

   40 exp: PI .

    $default  reduce using rule 40 (exp)


State 53

   46 exp: MINUS . exp

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 79
    unaryop  go to state 58


State 54

   48 exp: LPAREN . exp RPAREN

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 80
    unaryop  go to state 58


State 55

   28 uop: IDENTIFIER LPAREN RPAREN . mixedlist SEMI

    IDENTIFIER  shift, and go to state 23

    idlist     go to state 25
    mixedlist  go to state 81


State 56

   29 uop: IDENTIFIER LPAREN explist . RPAREN mixedlist SEMI
   37 explist: explist . COMMA exp

    RPAREN  shift, and go to state 82
    COMMA   shift, and go to state 83


State 57

   36 explist: exp .
   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   44    | exp . MUL exp
   45    | exp . DIV exp
   47    | exp . POWER exp

    PLUS   shift, and go to state 84
    MINUS  shift, and go to state 85
    MUL    shift, and go to state 86
    DIV    shift, and go to state 87
    POWER  shift, and go to state 88

    $default  reduce using rule 36 (explist)


State 58

   49 exp: unaryop . LPAREN exp RPAREN

    LPAREN  shift, and go to state 89


State 59

   33 mixedlist: idlist LSQUARE . NNINTEGER RSQUARE

    NNINTEGER  shift, and go to state 90


State 60

   31 idlist: idlist COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 91


State 61

   27 uop: IDENTIFIER mixedlist SEMI .

    $default  reduce using rule 27 (uop)


State 62

   12 statement: BARRIER mixedlist SEMI .

    $default  reduce using rule 12 (statement)


State 63

   14 decl: CREG IDENTIFIER LSQUARE . NNINTEGER RSQUARE SEMI

    NNINTEGER  shift, and go to state 92


State 64

   13 decl: QREG IDENTIFIER LSQUARE . NNINTEGER RSQUARE SEMI

    NNINTEGER  shift, and go to state 93


State 65

   11 statement: IF LPAREN IDENTIFIER . MATCHES NNINTEGER RPAREN qop

    MATCHES  shift, and go to state 94


State 66

   35 argument: IDENTIFIER LSQUARE . NNINTEGER RSQUARE

    NNINTEGER  shift, and go to state 95


State 67

   23 qop: MEASURE argument ASSIGN . argument SEMI

    IDENTIFIER  shift, and go to state 31

    argument  go to state 96


State 68

    8 statement: OPAQUE IDENTIFIER LPAREN . RPAREN idlist SEMI
    9          | OPAQUE IDENTIFIER LPAREN . idlist RPAREN idlist SEMI

    IDENTIFIER  shift, and go to state 23
    RPAREN      shift, and go to state 97

    idlist  go to state 98


State 69

    7 statement: OPAQUE IDENTIFIER idlist . SEMI
   31 idlist: idlist . COMMA IDENTIFIER

    SEMI   shift, and go to state 99
    COMMA  shift, and go to state 60


State 70

   24 qop: RESET argument SEMI .

    $default  reduce using rule 24 (qop)


State 71

   16 gatedecl: GATE IDENTIFIER LPAREN . RPAREN idlist LBRACE
   17         | GATE IDENTIFIER LPAREN . idlist RPAREN idlist LBRACE

    IDENTIFIER  shift, and go to state 23
    RPAREN      shift, and go to state 100

    idlist  go to state 101


State 72

   15 gatedecl: GATE IDENTIFIER idlist . LBRACE
   31 idlist: idlist . COMMA IDENTIFIER

    LBRACE  shift, and go to state 102
    COMMA   shift, and go to state 60


State 73

   26 uop: CX argument COMMA . argument SEMI

    IDENTIFIER  shift, and go to state 31

    argument  go to state 103


State 74

   25 uop: U LPAREN explist . RPAREN argument SEMI
   37 explist: explist . COMMA exp

    RPAREN  shift, and go to state 104
    COMMA   shift, and go to state 83


State 75

   19 goplist: BARRIER idlist . SEMI
   31 idlist: idlist . COMMA IDENTIFIER

    SEMI   shift, and go to state 105
    COMMA  shift, and go to state 60


State 76

    5 statement: gatedecl goplist RBRACE .

    $default  reduce using rule 5 (statement)


State 77

   21 goplist: goplist BARRIER . idlist SEMI

    IDENTIFIER  shift, and go to state 23

    idlist  go to state 106


State 78

   20 goplist: goplist uop .

    $default  reduce using rule 20 (goplist)


State 79

   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   44    | exp . MUL exp
   45    | exp . DIV exp
   46    | MINUS exp .
   47    | exp . POWER exp

    MUL    shift, and go to state 86
    DIV    shift, and go to state 87
    POWER  shift, and go to state 88

    $default  reduce using rule 46 (exp)


State 80

   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   44    | exp . MUL exp
   45    | exp . DIV exp
   47    | exp . POWER exp
   48    | LPAREN exp . RPAREN

    PLUS    shift, and go to state 84
    MINUS   shift, and go to state 85
    MUL     shift, and go to state 86
    DIV     shift, and go to state 87
    POWER   shift, and go to state 88
    RPAREN  shift, and go to state 107


State 81

   28 uop: IDENTIFIER LPAREN RPAREN mixedlist . SEMI

    SEMI  shift, and go to state 108


State 82

   29 uop: IDENTIFIER LPAREN explist RPAREN . mixedlist SEMI

    IDENTIFIER  shift, and go to state 23

    idlist     go to state 25
    mixedlist  go to state 109


State 83

   37 explist: explist COMMA . exp

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 110
    unaryop  go to state 58


State 84

   42 exp: exp PLUS . exp

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 111
    unaryop  go to state 58


State 85

   43 exp: exp MINUS . exp

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 112
    unaryop  go to state 58


State 86

   44 exp: exp MUL . exp

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 113
    unaryop  go to state 58


State 87

   45 exp: exp DIV . exp

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 114
    unaryop  go to state 58


State 88

   47 exp: exp POWER . exp

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 115
    unaryop  go to state 58


State 89

   49 exp: unaryop LPAREN . exp RPAREN

    IDENTIFIER  shift, and go to state 43
    REAL        shift, and go to state 44
    NNINTEGER   shift, and go to state 45
    SIN         shift, and go to state 46
    COS         shift, and go to state 47
    TAN         shift, and go to state 48
    EXP         shift, and go to state 49
    LN          shift, and go to state 50
    SQRT        shift, and go to state 51
    PI          shift, and go to state 52
    MINUS       shift, and go to state 53
    LPAREN      shift, and go to state 54

    exp      go to state 116
    unaryop  go to state 58


State 90

   33 mixedlist: idlist LSQUARE NNINTEGER . RSQUARE

    RSQUARE  shift, and go to state 117


State 91

   31 idlist: idlist COMMA IDENTIFIER .

    $default  reduce using rule 31 (idlist)


State 92

   14 decl: CREG IDENTIFIER LSQUARE NNINTEGER . RSQUARE SEMI

    RSQUARE  shift, and go to state 118


State 93

   13 decl: QREG IDENTIFIER LSQUARE NNINTEGER . RSQUARE SEMI

    RSQUARE  shift, and go to state 119


State 94

   11 statement: IF LPAREN IDENTIFIER MATCHES . NNINTEGER RPAREN qop

    NNINTEGER  shift, and go to state 120


State 95

   35 argument: IDENTIFIER LSQUARE NNINTEGER . RSQUARE

    RSQUARE  shift, and go to state 121


State 96

   23 qop: MEASURE argument ASSIGN argument . SEMI

    SEMI  shift, and go to state 122


State 97

    8 statement: OPAQUE IDENTIFIER LPAREN RPAREN . idlist SEMI

    IDENTIFIER  shift, and go to state 23

    idlist  go to state 123


State 98

    9 statement: OPAQUE IDENTIFIER LPAREN idlist . RPAREN idlist SEMI
   31 idlist: idlist . COMMA IDENTIFIER

    RPAREN  shift, and go to state 124
    COMMA   shift, and go to state 60


State 99

    7 statement: OPAQUE IDENTIFIER idlist SEMI .

    $default  reduce using rule 7 (statement)


State 100

   16 gatedecl: GATE IDENTIFIER LPAREN RPAREN . idlist LBRACE

    IDENTIFIER  shift, and go to state 23

    idlist  go to state 125


State 101

   17 gatedecl: GATE IDENTIFIER LPAREN idlist . RPAREN idlist LBRACE
   31 idlist: idlist . COMMA IDENTIFIER

    RPAREN  shift, and go to state 126
    COMMA   shift, and go to state 60


State 102

   15 gatedecl: GATE IDENTIFIER idlist LBRACE .

    $default  reduce using rule 15 (gatedecl)


State 103

   26 uop: CX argument COMMA argument . SEMI

    SEMI  shift, and go to state 127


State 104

   25 uop: U LPAREN explist RPAREN . argument SEMI

    IDENTIFIER  shift, and go to state 31

    argument  go to state 128


State 105

   19 goplist: BARRIER idlist SEMI .

    $default  reduce using rule 19 (goplist)


State 106

   21 goplist: goplist BARRIER idlist . SEMI
   31 idlist: idlist . COMMA IDENTIFIER

    SEMI   shift, and go to state 129
    COMMA  shift, and go to state 60


State 107

   48 exp: LPAREN exp RPAREN .

    $default  reduce using rule 48 (exp)


State 108

   28 uop: IDENTIFIER LPAREN RPAREN mixedlist SEMI .

    $default  reduce using rule 28 (uop)


State 109

   29 uop: IDENTIFIER LPAREN explist RPAREN mixedlist . SEMI

    SEMI  shift, and go to state 130


State 110

   37 explist: explist COMMA exp .
   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   44    | exp . MUL exp
   45    | exp . DIV exp
   47    | exp . POWER exp

    PLUS   shift, and go to state 84
    MINUS  shift, and go to state 85
    MUL    shift, and go to state 86
    DIV    shift, and go to state 87
    POWER  shift, and go to state 88

    $default  reduce using rule 37 (explist)


State 111

   42 exp: exp . PLUS exp
   42    | exp PLUS exp .
   43    | exp . MINUS exp
   44    | exp . MUL exp
   45    | exp . DIV exp
   47    | exp . POWER exp

    MUL    shift, and go to state 86
    DIV    shift, and go to state 87
    POWER  shift, and go to state 88

    $default  reduce using rule 42 (exp)


State 112

   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   43    | exp MINUS exp .
   44    | exp . MUL exp
   45    | exp . DIV exp
   47    | exp . POWER exp

    MUL    shift, and go to state 86
    DIV    shift, and go to state 87
    POWER  shift, and go to state 88

    $default  reduce using rule 43 (exp)


State 113

   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   44    | exp . MUL exp
   44    | exp MUL exp .
   45    | exp . DIV exp
   47    | exp . POWER exp

    POWER  shift, and go to state 88

    $default  reduce using rule 44 (exp)


State 114

   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   44    | exp . MUL exp
   45    | exp . DIV exp
   45    | exp DIV exp .
   47    | exp . POWER exp

    POWER  shift, and go to state 88

    $default  reduce using rule 45 (exp)


State 115

   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   44    | exp . MUL exp
   45    | exp . DIV exp
   47    | exp . POWER exp
   47    | exp POWER exp .

    POWER  shift, and go to state 88

    $default  reduce using rule 47 (exp)


State 116

   42 exp: exp . PLUS exp
   43    | exp . MINUS exp
   44    | exp . MUL exp
   45    | exp . DIV exp
   47    | exp . POWER exp
   49    | unaryop LPAREN exp . RPAREN

    PLUS    shift, and go to state 84
    MINUS   shift, and go to state 85
    MUL     shift, and go to state 86
    DIV     shift, and go to state 87
    POWER   shift, and go to state 88
    RPAREN  shift, and go to state 131


State 117

   33 mixedlist: idlist LSQUARE NNINTEGER RSQUARE .

    $default  reduce using rule 33 (mixedlist)


State 118

   14 decl: CREG IDENTIFIER LSQUARE NNINTEGER RSQUARE . SEMI

    SEMI  shift, and go to state 132


State 119

   13 decl: QREG IDENTIFIER LSQUARE NNINTEGER RSQUARE . SEMI

    SEMI  shift, and go to state 133


State 120

   11 statement: IF LPAREN IDENTIFIER MATCHES NNINTEGER . RPAREN qop

    RPAREN  shift, and go to state 134


State 121

   35 argument: IDENTIFIER LSQUARE NNINTEGER RSQUARE .

    $default  reduce using rule 35 (argument)

